[package]
name = "docker-ipam-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
hyper-unix-connector = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
ipnetwork = "0.20"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "docker_ipam_plugin"
path = "src/lib.rs"

[[bin]]
name = "docker-ipam-plugin"
path = "src/main.rs"
